go reports-service: Refactor report repository
